--- a/IvA/Views/Dashboard/Index.cshtml
+++ b/IvA/Views/Dashboard/Index.cshtml
@@ -5,7 +5,24 @@
 }
 
 <h1>Mein Dashboard</h1>
-
+<h2>Demnächst zu erledigen<h2>
+<div class="card-deck">
+    @foreach (var item in Model)
+    {
+        DateTime now = DateTime.Now;
+        @if (item.Frist <= now.AddDays(3)) 
+        {
+        <div class="card bg-secondary">
+            <div class="card-header text-center" style="font-size: 20px;"><a asp-action="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></div>
+            <div class="card-body text-center">
+                <p class ="card-text" style="font-size: 15px;">@item.Beschreibung</p>
+                <p class="card-text" style="font-size: 20px;">@item.Frist</p>
+            </div>
+        </div>
+        }
+    }
+</div>
+<!--
 <h2>Demnächst zu erledigen</h2>
 <table class="table">
     <thead>
@@ -42,7 +59,7 @@
         }
     </tbody>
 </table>
-
+-->
 <h2>To do</h2>
 <table class="table">
     <thead>
@@ -152,3 +169,5 @@
         }
     </tbody>
 </table>
+
+
