--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
     @if (this.User.Identity.IsAuthenticated)
     {
         <div style="margin-top:100px">
-            
+
             <div class="systemChat align-baseline transparente" id="user_head">
                 <div class="columna" id="user_content">
                     <div class="row" id="xxx">
@@ -91,16 +91,23 @@
             <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
             <script src="~/js/chat.js"></script>
         </div>
-        }
+    }
 
-        <footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2020 - Collab - <a asp-area="" asp-controller="Home" asp-action="Impressum">Impressum</a>
-            </div>
-        </footer>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        @RenderSection("Scripts", required: false)
-    </body>
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2020 - Collab - <a asp-area="" asp-controller="Home" asp-action="Impressum">Impressum</a>
+        </div>
+    </footer>
+    <!--para el audio-->
+    <audio id="audio" style="display:none"  controls>
+        <source type="audio/wav" src="~/img/notify.wav">
+        <source type="audio/mp3" src="~/img/notify.mpeg">
+        <source type="audio/ogg" src="~/img/notify.ogg">
+    </audio>
+    <!--para el audio-->
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
+</body>
 </html>
