--- a/IvA/Areas/Identity/Pages/Account/Login.cshtml
+++ b/IvA/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="color:#ffa400"><b>@ViewData["Title"]</b></h1>
 <div class="row">
     <div class="col-md-4">
         <section>
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Einloggen</button>
+                    <button type="submit" class="btn btn-orange"><b>Einloggen</b></button>
                 </div>
                 <div class="form-group">
                     <p>
@@ -41,23 +41,23 @@
                     <p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Neuen Benutzer anlegen</a>
                     </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Email Bestätigung neu senden</a>
-                    </p>
+                    <!--<p>
+        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Email Bestätigung neu senden</a>
+    </p>-->
                 </div>
             </form>
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>Kein Plan was man hier noch rein klatschen kann</h4>
+            <h4></h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
                         <p>
-                            Hier könnte ihre Werbung stehen. Ansonsten kann man den rechten scheiß hier auch rausschmeissen.
+                            
                         </p>
                     </div>
                 }
