--- a/IvA/Areas/Identity/Pages/Account/Register.cshtml
+++ b/IvA/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Registrieren";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="color:#ffa400"><b>@ViewData["Title"]</b></h1>
 
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Neuen Nutzer anlegen</h4>
+            <br />
+            <h3 style="color:red"> Hinweis: Passwörter werden im Klartext gespeichert!</h3>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -32,21 +34,8 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Registrieren</button>
+            <button type="submit" class="btn btn-orange"><b>Registrieren</b></button>
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Passwörter werden im Klartext gespeichert</h4>
-            <hr />
-            @{
-                <div>
-                    <p>
-                        9/11 was an inside job
-                    </p>
-                </div>
-            }
-        </section>
     </div>
 </div>
 
