--- a/IvA/Views/Projekte/PaketDetails.cshtml
+++ b/IvA/Views/Projekte/PaketDetails.cshtml
@@ -63,17 +63,25 @@
         </svg>
         @if (Model.Package.Zeitbudget - Model.Package.VerbrauchteZeit > 0)
         {
-<span class="btn btn-info">Verfügbare Zeit: @(Model.Package.Zeitbudget - Model.Package.VerbrauchteZeit) Stunden</span> }
-            else
-            {
-<span class="btn btn-danger">Die verfügbare Arbeitszeit für dieses Paket ist überschritten!</span>}
+        <span class="btn btn-info">Verfügbare Zeit: @(Model.Package.Zeitbudget - Model.Package.VerbrauchteZeit) Stunden</span> 
+        }
+        else
+        {
+        <span class="btn btn-danger">Die verfügbare Arbeitszeit für dieses Paket ist überschritten!</span>
+        }
     </div>
 </div>
 
 
 <div style="margin-top:15px">
-    <a class="btn btn-orange" style="margin-right:10px" asp-action="PaketAnpassen" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId"><b>Bearbeiten</b></a>
-    <a class="btn btn-orange" style="margin-right:10px" asp-action="PaketZeit" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId"><b>Zeit eintragen</b></a>
+    <a class="btn btn-orange" style="margin-right:10px" asp-action="PaketAnpassen" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">
+        <svg width="1em" height="1em" style="margin-right:8px" viewBox="0 0 16 16" class="bi bi-wrench" fill="#343a40" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019L13 11l-.471.242-.529.026-.287.445-.445.287-.026.529L11 13l.242.471.026.529.445.287.287.445.529.026L13 15l.471-.242.529-.026.287-.445.445-.287.026-.529L15 13l-.242-.471-.026-.529-.445-.287-.287-.445-.529-.026z" />
+        </svg><b>Bearbeiten</b></a>
+    <a class="btn btn-orange" style="margin-right:10px" asp-action="PaketZeit" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">
+        <svg width="1em" height="1em" style="margin-right:8px" viewBox="0 0 16 16" class="bi bi-clock-fill" fill=""#343a40" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z" />
+        </svg><b>Zeit eintragen</b></a>
     <!--<a class="btn btn-primary" style="margin-right:10px" asp-action="PackageUserList" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Mitglieder</a>-->
     <a class="btn btn-danger" style="margin-right:10px" asp-action="PaketLöschenGet" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId"><b>Arbeitspaket löschen</b></a>
     <a class="btn btn-dark" style="color: #ffa400 ; margin-right:10px" asp-action="Index" asp-controller="Projekte">Zurück zur Projektübersicht</a>
