--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -23,18 +23,18 @@
                         @if (this.User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+                                <a class="nav-link text-white FirstLetter" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Projekte" asp-action="Index">Projekte</a>
+                                <a class="nav-link text-white FirstLetter" asp-area="" asp-controller="Projekte" asp-action="Index">Projekte</a>
                             </li>       
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle text-white FirstLetter" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Adminpanel
                                 </a>
                                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item bg-secondary" style="color:#ffa400" asp-area="" asp-controller="Admin" asp-action="ListUsers">Nutzerverwaltung</a>
-                                    <a class="dropdown-item bg-secondary" style="color:#ffa400" asp-area="" asp-controller="Admin" asp-action="ListProjects">Projekteverwaltung</a>
+                                    <a class="dropdown-item bg-secondary FirstLetter" style="color:white" asp-area="" asp-controller="Admin" asp-action="ListUsers">Nutzerverwaltung</a>
+                                    <a class="dropdown-item bg-secondary FirstLetter" style="color:white" asp-area="" asp-controller="Admin" asp-action="ListProjects">Projekteverwaltung</a>
                                 </div>
                             </li>
                         }
